npr/caddy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  template:
    spec:
      containers:
        - name: caddy
          image: caddy:2.11.4
          args:
            - caddy
            - file-server
            - --root
            - /srv
            - --listen
            - :80
            - --browse
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: webroot
              mountPath: /srv
              readOnly: true
      volumes:
        - name: webroot
          hostPath:
            path: /srv/darkhttpd
            type: DirectoryOrCreate
