npr/caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
