npr/caddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy
spec:
  ingressClassName: nginx
  rules:
    - host: file.zasda.id
      http:
        paths:
          - backend:
              service:
                name: caddy
                port:
                  number: 80
            path: /
            pathType: Prefix
